tests/compile_fail/conflicting_short.stderr
error: `no_short` and `short` are conflicting attributes, they cannot go together in the same field.
 --> $DIR/conflicting_short.rs:8:9
  |
8 |     pub value: bool,
  |         ^^^^^
